pkg/templates/charts/toggle/server-foundation/templates/managedcluster-import-agent-registration-server.yaml
kind: Service
apiVersion: v1
metadata:
  name: managedcluster-import-agent-registration
  namespace: multicluster-engine
	annotations:
     service.alpha.openshift.io/serving-cert-secret-name: managedcluster-import-agent-registration-serving-cert
spec:
  ports:
    - protocol: TCP
      port: 9091
      targetPort: 9091
      name: agentregistration
  type: ClusterIP
  selector:
    app: managedcluster-import-controller-v2
